...
            "state": "translated",
            "value": "V4 (325 kW)"
          }
        }
      }
    },
    "List": {},
    "list.empty.description": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
...
    "list.search.prompt": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Search by name or city"
          }
        },
        "nb": {
          "stringUnit": {
            "state": "translated",
            "value": "Søk etter navn eller by"
...
    "list.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Superchargers"
          }
        },
        "nb": {
          "stringUnit": {
            "state": "translated",
            "value": "Superladere"
          }
        }
      }
    },
    "Map": {
      "comment": "The label for the \"Map\" tab in the main view.",
      "isCommentAutoGenerated": true
    },
    "map.recenter": {
      "extractionState": "manual",
      "localizations": {
...
            "state": "translated",
            "value": "Type 2"
          }
        }
      }
    },
    "Settings": {
      "comment": "A label for the settings tab in the app.",
      "isCommentAutoGenerated": true
    },
    "settings.credits": {
      "extractionState": "manual",
      "localizations": {
...
